--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
         "ms-vscode.vscode-typescript-next",
         "equinusocio.vsc-material-theme-icons",
         "mhutchie.git-graph",
-        "eamodio.gitlens"
+        "eamodio.gitlens",
+        "hossaini.quasar-intellisense"
     ]
 }
