--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/html-validator": "^1.8.2",
     "@nuxtjs/robots": "^3.0.0",
+    "@nuxtjs/strapi": "^1.12.0",
     "@pinia/nuxt": "^0.5.1",
     "@quasar/extras": "^1.16.12",
     "nuxt": "^3.12.3",
