--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^3.0.2",
     "@nuxtjs/i18n": "^9.0.0-alpha.1",
     "typescript": "^5.5.3"
