--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
         "equinusocio.vsc-material-theme-icons",
         "mhutchie.git-graph",
         "eamodio.gitlens",
-        "hossaini.quasar-intellisense"
+        "hossaini.quasar-intellisense",
+        "graphql.vscode-graphql-syntax"
     ]
 }
