Navigation bar updated to follow the design v1 - Adding Tailwind - Adding Exo Fonts - Adding Logo

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
         "mhutchie.git-graph",
         "eamodio.gitlens",
         "hossaini.quasar-intellisense",
-        "graphql.vscode-graphql-syntax"
+        "graphql.vscode-graphql-syntax",
+        "bradlc.vscode-tailwindcss"
     ]
 }
