--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^3.0.2",
     "@nuxtjs/i18n": "^9.0.0-alpha.1",
+    "@nuxtjs/tailwindcss": "^6.12.1",
     "typescript": "^5.5.3"
   },
   "overrides": {
