--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^3.0.2",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "^9.0.0-alpha.1",
+    "@nuxtjs/tailwindcss": "^6.12.1",
     "typescript": "^5.5.3"
   },
+  "lint": "eslint --ext .ts,.js,.vue .",
   "overrides": {
     "vue": "latest"
   }
