--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@nuxtjs/strapi": "^1.12.0",
     "@pinia/nuxt": "^0.5.1",
     "@quasar/extras": "^1.16.12",
+    "@vue/server-renderer": "^3.5.0",
     "nuxt": "^3.12.4",
     "nuxt-graphql-client": "^0.2.35",
     "nuxt-quasar-ui": "^2.1.3",
     "quasar": "^2.16.5",
-    "vue": "latest"
+    "vue": "^3.5.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
