--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/html-validator": "^1.8.2",
-    "@nuxtjs/robots": "^3.0.0",
+    "@nuxtjs/seo": "^2.0.0-rc.20",
     "@nuxtjs/strapi": "^1.12.0",
     "@pinia/nuxt": "^0.5.1",
     "@quasar/extras": "^1.16.12",
@@ -24,6 +24,7 @@
     "nuxt": "^3.12.4",
     "nuxt-graphql-client": "^0.2.35",
     "nuxt-quasar-ui": "^2.1.3",
+    "nuxt-simple-robots": "^4.0.1",
     "quasar": "^2.16.5",
     "vue": "^3.5.0"
   },
@@ -33,10 +34,12 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "^9.0.0-alpha.1",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "nuxi": "^3.13.1",
     "typescript": "^5.5.3"
   },
   "lint": "eslint --ext .ts,.js,.vue .",
   "overrides": {
     "vue": "latest"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
