--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
     },
     "editor.quickSuggestions": {
         "strings": true
-    }
+    },
+    "typescript.tsdk": "node_modules\\typescript\\lib"
 }
