--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue": "^3.5.0"
   },
   "devDependencies": {
+    "@nuxt/schema": "^3.13.1",
     "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^3.0.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
