--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,8 @@
     "target": "ES2022",
     "module": "ES2022",
     "moduleResolution": "Node",
+    "types": [
+      "@nuxt/schema"
+    ]
   },
 }
