--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "vue": "^3.5.0"
   },
   "devDependencies": {
+    "@nuxt/schema": "^3.13.1",
     "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^3.0.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/i18n": "^9.0.0-alpha.1",
+    "@nuxtjs/i18n": "^8.5.3",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxi": "^3.13.1",
     "typescript": "^5.5.3"
