--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "ES2022",
     "moduleResolution": "Node",
     "types": [
-      "@nuxt/schema"
+      "@nuxt/schema",
     ]
   },
 }
