Created character page (#24)
- Added .cpanel deploy config
- Added more i18n locales

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ NUXT_ENVIRONMENT=development
 GOOGLE_ADSENSE_ID=""
 GOOGLE_ADSENSE_TEST_MODE=true
 NUXT_PUBLIC_SITE_URL=
+DEEPL_API_KEY=
+DEEPL_API_URL=
+
