--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/google-adsense": "^3.0.0",
     "@nuxtjs/html-validator": "^1.8.2",
     "@nuxtjs/seo": "^2.0.0-rc.20",
     "@nuxtjs/strapi": "^1.12.0",
