--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "documents": "**/*.{graphql,js,ts,jsx,tsx}"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/google-adsense": "^3.0.0",
     "@nuxtjs/html-validator": "^1.8.2",
@@ -26,6 +27,7 @@
     "@vue/server-renderer": "^3.5.0",
     "axios": "^1.7.9",
     "deepl-node": "^1.16.0",
+    "flowbite": "^3.1.2",
     "form-data": "^4.0.2",
     "graphql-request": "^6.1.0",
     "nuxt": "^3.12.4",
@@ -41,7 +43,10 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "^8.5.3",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "autoprefixer": "^10.4.21",
     "nuxi": "^3.13.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.5.3"
   },
   "lint": "eslint --ext .ts,.js,.vue .",
