--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,12 @@
+[build]
+  command = "yarn build"
+  publish = ".output/public"
 
-[context.production.environment]
-  NUXT_APP_BASE_URL = "/temporadas"
+[functions]
+  directory = ".output/server"
+
+[dev]
+  command = "yarn dev"
+  port = 3000
+  targetPort = 3000
+  framework = "#custom"
