updated and working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,9 @@
     "editor.quickSuggestions": {
         "strings": true
     },
-    "typescript.tsdk": "node_modules\\typescript\\lib"
+    "typescript.tsdk": "node_modules\\typescript\\lib",
+    "tailwindCSS.classAttributes": [
+        "class",
+        "ui"
+    ],
 }
